...
      tf.autocorrectionType = UITextAutocorrectionType.no
      tf.backgroundColor = UIColor.grey()
      return tf
   }()
   let doneButton: UIButton = {
      let button = UIButton(type: .system)
      button.setTitle("Continue", for: .normal)
      button.setTitleColor(.black, for: .normal)
      button.backgroundColor = .link
      button.addTarget(self, action: #selector(doneButtonTapped), for: .touchUpInside)
      button.layer.cornerRadius = 10
      return button
   }()
...
