...
   }
   
   //Function to configure Navigation bar
   func configureNavigationBar() {
      
      //Sets title for navigation bar
      navigationItem.title = "Home"
      
      //Sets the font and textcolor of the title
      navigationController?.navigationBar.titleTextAttributes = [NSAttributedString.Key.foregroundColor: UIColor.white, NSAttributedString.Key.font: UIFont.systemFont(ofSize: 22, weight: .bold)]
      
      //Sets the tint color of the navigationBar.
      navigationController?.navigationBar.barTintColor = UIColor.grey()
...
